--- a/src/App.css
+++ b/src/App.css
@@ -23,17 +23,33 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*@keyframes App-logo-spin {*/
+/*  from {*/
+/*    transform: rotate(0deg);*/
+/*  }*/
+/*  to {*/
+/*    transform: rotate(360deg);*/
+/*  }*/
+/*}*/
 
 /*Custom Code Below*/
 .explain {
   border: 1px solid;
 
+}
+
+.imageContainer {
+  border: 1px solid gray;
+  width: auto;
+
+}
+
+img {
+  width: 50%;
+  height: 50vh;
+}
+
+body {
+  background-color: #282c34;
+  color: bisque;
 }
