--- a/src/ImageCard.css
+++ b/src/ImageCard.css
@@ -33,20 +33,42 @@
 /*}*/
 
 /*Custom Code Below*/
+
+h1 {
+  background-color: cornflowerblue;
+}
 .explain {
   border: 1px solid;
+  /*width: 50%;*/
+  margin: 5%;
+  padding: 5%;
+  line-height: 30px;
+  font-family: "Comic Sans MS", serif;
 
 }
 
 .imageContainer {
   border: 1px solid gray;
-  width: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 
 }
 
+.imgCard {
+  border: 4px solid darkslategrey;
+}
+
 img {
-  width: 50%;
+  /*width: 50%;*/
   height: 50vh;
+
+}
+
+#imageDate {
+  text-transform: capitalize;
+
 }
 
 body {
