--- a/src/ImageCard.css
+++ b/src/ImageCard.css
@@ -43,7 +43,8 @@ h1 {
   margin: 5%;
   padding: 5%;
   line-height: 30px;
-  font-family: "Comic Sans MS", serif;
+  font-family: "Trebuchet MS", serif;
+  font-size: smaller;
 
 }
 
